spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ body.active {
 }
 
 .weather, .subway {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 .clock .date {
@@ -148,7 +148,7 @@ body.active {
 .clock .time {
   font-size: 128px;
   font-weight: bold;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
 .clock .time > span {
@@ -181,6 +181,7 @@ body.active {
 
 .news ul {
   position: relative;
+  min-height: 100px;
 }
 
 .news ul li {
